// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectableCardField should render correctly 1`] = `
<DocumentFragment>
  .cache-whspdy {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-whspdy[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-whspdy[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-whspdy[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-whspdy:hover:not([data-error='true']):not([data-disabled='true']),
.cache-whspdy:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-whspdy:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-whspdy:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-whspdy:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-whspdy:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-syvkz8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-syvkz8[aria-disabled='false'] {
  cursor: pointer;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-syvkz8[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-syvkz8[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-syvkz8[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-syvkz8[data-checked='true'] {
  color: #4f0599;
}

.cache-syvkz8[data-error='true'] {
  color: #a6102d;
}

.cache-syvkz8[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-syvkz8 input+svg {
  display: none;
}

.cache-syvkz8 label {
  display: none;
}

.cache-twp8po {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-twp8po+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-twp8po:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-twp8po:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-twp8po[aria-invalid='true']:not([aria-disabled='true'])+.e1duuirp2 {
  fill: #a6102d;
}

.cache-twp8po:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-twp8po:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-twp8po[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-twp8po[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-whspdy ejleepd1"
      data-checked="false"
      data-disabled="false"
      data-error="false"
    >
      <div
        aria-disabled="false"
        class="ejleepd0 cache-syvkz8 e1duuirp0"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="cache-twp8po e1duuirp1"
          id="test-test"
          name="test"
          type="radio"
          value="test"
        />
        <svg
          class="cache-jsk10b e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-1e98oqk e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </div>
      Radio field
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-whspdy {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-whspdy[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-whspdy[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-whspdy[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-whspdy:hover:not([data-error='true']):not([data-disabled='true']),
.cache-whspdy:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-whspdy:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-whspdy:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-whspdy:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-whspdy:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-syvkz8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-syvkz8[aria-disabled='false'] {
  cursor: pointer;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-syvkz8[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-syvkz8[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-syvkz8[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-syvkz8[data-checked='true'] {
  color: #4f0599;
}

.cache-syvkz8[data-error='true'] {
  color: #a6102d;
}

.cache-syvkz8[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-syvkz8 input+svg {
  display: none;
}

.cache-syvkz8 label {
  display: none;
}

.cache-twp8po {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-twp8po+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-twp8po:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-twp8po:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-twp8po[aria-invalid='true']:not([aria-disabled='true'])+.e1duuirp2 {
  fill: #a6102d;
}

.cache-twp8po:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-twp8po:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-twp8po[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-twp8po[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-whspdy ejleepd1"
      data-checked="true"
      data-disabled="false"
      data-error="false"
    >
      <div
        aria-disabled="false"
        class="ejleepd0 cache-syvkz8 e1duuirp0"
        data-checked="true"
        data-error="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          checked=""
          class="cache-twp8po e1duuirp1"
          id="test-checked"
          name="test"
          type="radio"
          value="checked"
        />
        <svg
          class="cache-jsk10b e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-1e98oqk e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </div>
      Radio field checked
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-whspdy {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-whspdy[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-whspdy[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-whspdy[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-whspdy:hover:not([data-error='true']):not([data-disabled='true']),
.cache-whspdy:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-whspdy:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-whspdy:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-whspdy:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-whspdy:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-syvkz8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-syvkz8[aria-disabled='false'] {
  cursor: pointer;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-syvkz8[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-syvkz8[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-syvkz8[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-syvkz8[data-checked='true'] {
  color: #4f0599;
}

.cache-syvkz8[data-error='true'] {
  color: #a6102d;
}

.cache-syvkz8[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-syvkz8 input+svg {
  display: none;
}

.cache-syvkz8 label {
  display: none;
}

.cache-twp8po {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-twp8po+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-twp8po:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-twp8po:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-twp8po[aria-invalid='true']:not([aria-disabled='true'])+.e1duuirp2 {
  fill: #a6102d;
}

.cache-twp8po:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-twp8po:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-twp8po[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-twp8po[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-whspdy ejleepd1"
      data-checked="false"
      data-disabled="true"
      data-error="false"
    >
      <div
        aria-disabled="true"
        class="ejleepd0 cache-syvkz8 e1duuirp0"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-disabled="true"
          aria-invalid="false"
          class="cache-twp8po e1duuirp1"
          disabled=""
          id="test-disabled"
          name="test"
          type="radio"
          value="disabled"
        />
        <svg
          class="cache-jsk10b e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-1e98oqk e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </div>
      Radio field disabled
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly with errors 1`] = `
<DocumentFragment>
  .cache-whspdy {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-whspdy[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-whspdy[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-whspdy[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-whspdy:hover:not([data-error='true']):not([data-disabled='true']),
.cache-whspdy:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-whspdy:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-whspdy:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-whspdy:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-whspdy:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-syvkz8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-syvkz8[aria-disabled='false'] {
  cursor: pointer;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-syvkz8[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-syvkz8[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-syvkz8[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-syvkz8[data-checked='true'] {
  color: #4f0599;
}

.cache-syvkz8[data-error='true'] {
  color: #a6102d;
}

.cache-syvkz8[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-syvkz8 input+svg {
  display: none;
}

.cache-syvkz8 label {
  display: none;
}

.cache-twp8po {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-twp8po+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-twp8po:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-twp8po:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-twp8po[aria-invalid='true']:not([aria-disabled='true'])+.e1duuirp2 {
  fill: #a6102d;
}

.cache-twp8po:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-twp8po:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-twp8po[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-twp8po[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-whspdy ejleepd1"
      data-checked="false"
      data-disabled="false"
      data-error="true"
    >
      <div
        aria-disabled="false"
        class="ejleepd0 cache-syvkz8 e1duuirp0"
        data-checked="false"
        data-error="true"
      >
        <input
          aria-disabled="false"
          aria-invalid="true"
          class="cache-twp8po e1duuirp1"
          id="test-checked"
          name="test"
          type="radio"
          value="checked"
        />
        <svg
          class="cache-jsk10b e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-1e98oqk e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </div>
      Radio field error
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-whspdy {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-whspdy[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-whspdy[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-whspdy[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-whspdy:hover:not([data-error='true']):not([data-disabled='true']),
.cache-whspdy:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-whspdy:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-whspdy:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-whspdy:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-whspdy:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-syvkz8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-syvkz8[aria-disabled='false'] {
  cursor: pointer;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-syvkz8:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-syvkz8[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-syvkz8[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-syvkz8[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-syvkz8[data-checked='true'] {
  color: #4f0599;
}

.cache-syvkz8[data-error='true'] {
  color: #a6102d;
}

.cache-syvkz8[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-syvkz8 input+svg {
  display: none;
}

.cache-syvkz8 label {
  display: none;
}

.cache-twp8po {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-twp8po+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-twp8po:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-twp8po:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-twp8po[aria-invalid='true']:not([aria-disabled='true'])+.e1duuirp2 {
  fill: #a6102d;
}

.cache-twp8po:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-twp8po:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-twp8po[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-twp8po[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-whspdy ejleepd1"
      data-checked="true"
      data-disabled="false"
      data-error="false"
    >
      <div
        aria-disabled="false"
        class="ejleepd0 cache-syvkz8 e1duuirp0"
        data-checked="true"
        data-error="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="cache-twp8po e1duuirp1"
          id="test-events"
          name="test"
          type="radio"
          value="events"
        />
        <svg
          class="cache-jsk10b e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-1e98oqk e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </div>
      Radio field events
    </div>
  </form>
</DocumentFragment>
`;
